@startuml
'https://plantuml.com/class-diagram
class Topic{
    +List<(TinTuc)> t;
    +void dangky(TopicListener listener)
    +void huydangky(TopicListener listener)
    +void themMoi(TinTuc t)
    +void capNhat(TinTuc t)
}
interface TopicListener{
    void listen(Tintuc t)
}
class ThanhVienA
class ThanhVienB{
    List<TinTuc> list;
}

TopicListener <|... ThanhVienA
TopicListener <|... ThanhVienB
Topic o--> TopicListener:listeners
ThanhVienA --> Topic:topic
ThanhVienB --> Topic:topic


@enduml